--- a/src/app.html
+++ b/src/app.html
@@ -8,9 +8,8 @@
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
-		<script src="/sandbox/js/plugins.js"></script>
-		<script src="https://code.jquery.com/jquery-3.6.3.min.js"
-			integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+		<div style="display: contents">
+			%sveltekit.body%
+		</div>
 	</body>
 </html>
